--- a/Postegre-Mediatheque-RESTCRUD/.settings/org.eclipse.wst.common.component
+++ b/Postegre-Mediatheque-RESTCRUD/.settings/org.eclipse.wst.common.component
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
 	<wb-module deploy-name="Postegre-Mediatheque-RESTCRUD">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-		<wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-		<wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-		<wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/" source-path="/src/main/frontAngular/dist"/>
+        <wb-resource deploy-path="/" source-path="/src/main/webapp/WEB-INF"/>
         <dependent-module archiveName="Postegre-Mediatheque-Persistance-1.0.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/Postegre-Mediatheque-Persistance/Postegre-Mediatheque-Persistance">
             <dependency-type>uses</dependency-type>
         </dependent-module>
